--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.0.11"
   },
   "dependencies": {
+    "daisyui": "^4.12.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
