--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": ["browser-extension", "react", "tailwindcss"],
+  "keywords": [
+    "browser-extension",
+    "react",
+    "tailwindcss"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -23,6 +27,7 @@
     "daisyui": "^4.12.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.65.0"
   }
 }
