--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vite-plugin-static-copy": "^3.1.4"
   },
   "dependencies": {
     "daisyui": "^4.12.2",
